testdata/compiler/invalid/undefined-variable-in-inherited-path.pt
req parentReq:
	GET /groups/:group_id

req child(parentReq):
	header X = "ok"

flow "missing-inherited-var":
	child
